lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__backup-corrupt-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Backup──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││Create backup                                                             │"
"│  Install             ││Created           Size     Backup ID  Landscape  Remark                   │"
"│> Backup              ││<DATE>  1.5 MiB  ab12cd34   1.2.3      before upgrade           │"
"│  Update              ││<DATE>  3.3 MiB  feedface   0.9.0      urgent snapshot taken …  │"
"│  Mirror              ││> 20260902-1010-broken  invalid                                           │"
"│  Common software     ││                                                                          │"
"│  Reinit              ││                                                                          │"
"│                      ││                                                                          │"
"│                 ┌Backup corrupt────────────────────────────────────────────────┐                 │"
"│                 │    The full verification failed, so this backup cannot be    │                 │"
"│                 │                           restored.                          │                 │"
"│                 │                                                              │                 │"
"│                 │                        Enter/Esc Close                       │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Enter/Esc Close                                                                                     "
