lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__backup-create-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Backup──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││> Create backup                                                           │"
"│  Install             ││  Created           Size     Backup ID  Landscape  Remark                 │"
"│> Backup              ││  <DATE>  1.5 MiB  ab12cd34   1.2.3      before upgrade         │"
"│  Update              ││  <DATE>  3.3 MiB  feedface   0.9.0      urgent snapshot taken …│"
"│  Mirror              ││  20260902-1010-broken  invalid                                           │"
"│  Common software     ││                                                                          │"
"│  Reinit       ┌Create backup─────────────────────────────────────────────────────┐               │"
"│               │A minimal configuration-level snapshot will be created, containing│               │"
"│               │the minimal set of files needed for restore; the remark is        │               │"
"│               │optional.                                                         │               │"
"│               │                                                                  │               │"
"│               │Remark: _                                                         │               │"
"│               │                                                                  │               │"
"│               │Ctrl+C Exit  Type remark  Enter Create  Esc Cancel                │               │"
"│               └──────────────────────────────────────────────────────────────────┘               │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                 Language: English (en) (L paused while typing)"
"Ctrl+C Exit  Type remark  Enter Create  Esc Cancel                                                  "
