lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__backup-create-progress-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Backup──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││> Create backup                                                           │"
"│  Install             ││  Created           Size     Backup ID  Landscape  Remark                 │"
"│> Backup              ││  <DATE>  1.5 MiB  ab12cd34   1.2.3      before upgrade         │"
"│  Update              ││                                                                          │"
"│  Mirror              ││                                                                          │"
"│  Common software     ││                                                                          │"
"│  Reinit              ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│           ┌Creating backup───────────────────────────────────────────────────────────┐           │"
"│           │Exporting configuration from the running Landscape...                     │           │"
"│           │                                     0%                                   │           │"
"│           └──────────────────────────────────────────────────────────────────────────┘           │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  creating backup...                                                                     "
