lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__backup-detail-verified-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Backup details──────────────────────────────────────────────────────────┐"
"│  Overview            ││Backup details                                                            │"
"│  Install             ││                                                                          │"
"│> Backup              ││Remark  before upgrade                                                    │"
"│  Update              ││Backup ID  20260807-131500-ab12cd34                                       │"
"│  Mirror              ││Created  <DATE>:00 UTC                                          │"
"│  Common software     ││Size  1.5 MiB                                                             │"
"│  Reinit              ││Landscape  1.2.3                                                          │"
"│                      ││lkit  0.1.3                                                               │"
"│                      ││Architecture  x86_64                                                      │"
"│                      ││Hostname  edge                                                            │"
"│                      ││Auto  false                                                               │"
"│                      ││Scope  minimal                                                            │"
"│                      ││Contents  binary=true static=true static_archive=false init_config=true   │"
"│                      ││geo_cache=false                                                           │"
"│                      ││                                                                          │"
"│                      ││Press R to restore 20260807-131500-ab12cd34 or V to verify it.            │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"verified                                                                     [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Up/Down Scroll  V Verify  R Restore  D Delete  Esc Back                                "
