lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__backup-list-zh.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                                      Landscape：已安装  daemon：未运行" Hidden by multi-width symbols: [(77, " "), (79, " "), (81, " "), (83, " "), (93, " "), (95, " "), (97, " "), (99, " ")]
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌导航──────────────────┐┌> 备份────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (28, " "), (30, " ")]
"│  概览                ││> 创建备份                                                                │" Hidden by multi-width symbols: [(4, " "), (6, " "), (28, " "), (30, " "), (32, " "), (34, " ")]
"│  安装                ││创建时间          大小     备份 ID   Landscape 版本  备注                 │" Hidden by multi-width symbols: [(4, " "), (6, " "), (26, " "), (28, " "), (30, " "), (32, " "), (44, " "), (46, " "), (53, " "), (55, " "), (73, " "), (75, " "), (79, " "), (81, " ")]
"│> 备份                ││<DATE>  1.5 MiB  ab12cd34  1.2.3           before upgrade       │" Hidden by multi-width symbols: [(4, " "), (6, " ")]
"│  更新                ││<DATE>  3.3 MiB  feedface  0.9.0           urgent snapshot ta…  │" Hidden by multi-width symbols: [(4, " "), (6, " ")]
"│  换源                ││20260902-1010-broken  损坏                                                │" Hidden by multi-width symbols: [(4, " "), (6, " "), (48, " "), (50, " ")]
"│  常用软件            ││                                                                          │" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " ")]
"│  重新初始化          ││                                                                          │" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " "), (12, " ")]
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"就绪                                                                         [L] 切换到 English (en)" Hidden by multi-width symbols: [(1, " "), (3, " "), (82, " "), (84, " "), (86, " ")]
"Ctrl+C 退出  上/下 选择  Enter 打开  R 恢复  D 删除  Esc/← 菜单                                     " Hidden by multi-width symbols: [(8, " "), (10, " "), (14, " "), (17, " "), (20, " "), (22, " "), (32, " "), (34, " "), (40, " "), (42, " "), (48, " "), (50, " "), (60, " "), (62, " ")]
