lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__backup-restore-confirm-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Backup──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││Create backup                                                             │"
"│  Install             ││Created           Size     Backup ID  Landscape  Remark                   │"
"│> Backup              ││> <DATE>  1.5 MiB  ab12cd34   1.2.3      before upgrade         │"
"│  Update              ││<DATE>  3.3 MiB  feedface   0.9.0      urgent snapshot taken …  │"
"│  Mirror              ││20260902-1010-broken  invalid                                             │"
"│  Common so┌Confirm restore───────────────────────────────────────────────────────────┐           │"
"│  Reinit   │                           Restore this backup?                           │           │"
"│           │                                                                          │           │"
"│           │   20260807-131500-ab12cd34  version 1.2.3. The current release will be   │           │"
"│           │                                 replaced.                                │           │"
"│           │This backup is a minimal configuration-level snapshot: no SQLite data file│           │"
"│           │  (the database is re-initialized from the backup config on restore), API │           │"
"│           │   token, logs, or metrics. Data created after the backup will be lost.   │           │"
"│           │                                                                          │           │"
"│           │                  Ctrl+C Exit  Enter Restore  Esc Cancel                  │           │"
"│           └──────────────────────────────────────────────────────────────────────────┘           │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Enter Restore  Esc Cancel                                                              "
