lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__base-packages-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Common software─────────────────────────────────────────────────────────┐"
"│  Overview            ││Host: Debian (bookworm) (package manager: apt)                            │"
"│  Install             ││                                                                          │"
"│  Backup              ││> Docker  [not installed]                                                 │"
"│  Update              ││                                                                          │"
"│  Mirror              ││  Base packages  [5 missing]                                              │"
"│> Common software┌Base packages─────────────────────────────────────────────────┐                 │"
"│  Reinit         │> [x] pppd (ppp)  not installed                               │                 │"
"│                 │  ✓  ip (iproute2)  installed                                 │                 │"
"│                 │  [ ] iw (iw)  not installed                                  │                 │"
"│                 │  [ ] hostapd (hostapd)  not installed                        │                 │"
"│                 │  [x] sysctl (procps)  not installed                          │                 │"
"│                 │                                                              │                 │"
"│                 │  Install selected packages                                   │                 │"
"│                 │                                                              │                 │"
"│                 │Space toggles a package, Enter confirms, Esc cancels          │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Up/Down Select  Space Toggle  Enter Confirm  Esc Cancel                                "
