lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__daemon-deploy-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Overview────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is installed              │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup     ┌Deploy the lkit daemon────────────────────────────────────────────────┐nstall,      │"
"│  Update     │Deploy the lkit daemon?                                               │d by this    │"
"│  Mirror     │                                                                      │             │"
"│  Common soft│The recovery code (flare psk) protects the L2 recovery channel: the   │             │"
"│  Reinit     │daemon-hosted flare server tunnels to an lflare client over ethernet  │             │"
"│             │frames, usable when Landscape network configuration breaks (including │ng; deploy it│"
"│             │a failed network takeover). Type it twice to confirm; leave empty to  │             │"
"│             │have the daemon generate one.                                         │on ]         │"
"│             │                                                                      │             │"
"│             │> Flare recovery psk<empty: auto-generated>                           │             │"
"│             │Confirm psk      <empty: auto-generated>                              │             │"
"│             │[ Start deployment ]                                                  │             │"
"│             │                                                                      │             │"
"│             │Arrows Select  Enter Edit / Start  Esc Cancel                         │             │"
"│             │Esc Cancel                                                            │             │"
"│             │                                                                      │             │"
"│             └──────────────────────────────────────────────────────────────────────┘             │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                         Language: English (en)"
"Ctrl+C Exit  Arrows Select  Enter Edit / Start  Esc Cancel                                          "
