lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__daemon-deploy-progress-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Overview────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is installed              │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup              ││Version       1.2.3                 │privileged operations (install,      │"
"│  Update              ││Service       systemd               │update, reinit) delegated by this    │"
"│  Mirror     ┌Deploy the lkit daemon────────────────────────────────────────────────┐             │"
"│  Common soft│The recovery code (flare psk) protects the L2 recovery channel: the   │             │"
"│  Reinit     │daemon-hosted flare server tunnels to an lflare client over ethernet  │             │"
"│             │frames, usable when Landscape network configuration breaks (including │ng; deploy it│"
"│             │a f┌> Deploy the lkit daemon──────────────────────────────────────┐o  │             │"
"│             │hav│Deploying the lkit daemon...                                  │   │on ]         │"
"│             │   │                                                              │   │             │"
"│             │> F│                                                              │   │             │"
"│             │Con└──────────────────────────────────────────────────────────────┘   │             │"
"│             │[ Start deployment ]                                                  │             │"
"│             │[ Cancel ]                                                            │             │"
"│             │                                                                      │             │"
"│             │Ctrl+C Exit  Arrows Select  Enter Edit / Start  Esc Cancel            │             │"
"│             └──────────────────────────────────────────────────────────────────────┘             │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                         Language: English (en)"
"Ctrl+C Exit  Arrows Select  Enter Edit / Start  Esc Cancel                                          "
